fixed everything overflowing with smaller screen

--- a/style.css
+++ b/style.css
@@ -7,13 +7,13 @@ body {
     background-color: hsl(30, 38%, 92%);
     margin:0;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
 }
 
 .modal {
     background: white;
-    width: 40%;
+    width: 90vh;
     border-radius: 10px;
     box-shadow: 2px 4px 16px rgba(0,0,0,.2);
     display: flex;
